# NumericalOptimizationLibrary

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  example.cpp  example.h  global.h  line_search.cpp  line_search.h  main.cpp  newton.cpp  newton.h  pqf_by_sd.cpp  pqf_by_sd.h  sd.cpp  sd.h
doc/html/: annotated.html  class_n_o_l_1_1_damped_newton-members.html  class_n_o_l_1_1_damped_newton.html  class_n_o_l_1_1_line_search-members.html  class_n_o_l_1_1_line_search.html  class_n_o_l_1_1_line_search_for_s_d-members.html  class_n_o_l_1_1_line_search_for_s_d.html  class_n_o_l_1_1_linear_search-members.html  class_n_o_l_1_1_linear_search.html  class_n_o_l_1_1_min_step_size-members.html  class_n_o_l_1_1_min_step_size.html  class_n_o_l_1_1_min_step_size_3_01float_01_4-members.html  class_n_o_l_1_1_min_step_size_3_01float_01_4.html  class_n_o_l_1_1_newton_base-members.html  class_n_o_l_1_1_newton_base.html  class_n_o_l_1_1_optimization_base-members.html  class_n_o_l_1_1_optimization_base.html  class_n_o_l_1_1_options-members.html  class_n_o_l_1_1_options.html  class_n_o_l_1_1_quasi_newton-members.html  class_n_o_l_1_1_quasi_newton.html  class_n_o_l_1_1_steepest_descent-members.html  class_n_o_l_1_1_steepest_descent.html  class_n_o_l_1_1_target_functor-members.html  class_n_o_l_1_1_target_functor.html  class_n_o_l_1_1_timer-members.html  class_n_o_l_1_1_timer.html  class_n_o_l_1_1_unconstrained_optimization_line_search_base-members.html  class_n_o_l_1_1_unconstrained_optimization_line_search_base.html  classes.html  dir_218283bef7cb0e937ea20a33a4033d8c.html  dir_22d5e3afa2684e56ed99d1aeb7639f75.html  dir_23fdee2f6995db16c755697cdf620cf4.html  dir_3a581ba30d25676e4b797b1f96d53b45.html  dir_a454ddb175ad68c2ae0f485c546949af.html  dir_b1d2d90ceedd000968dcc7b6a73403dd.html  dir_f65c60cec7a82efdd62ea08950d80cb3.html  files.html  functions.html  functions_func.html  (+13 more)
doc/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+8 more)
src/: CMakeLists.txt  global.cpp  global.h  line_search.cpp  line_search.h  newton.cpp  newton.h  steepest_descent.cpp  steepest_descent.h
src/NOL/: CMakeLists.txt  conjugate_gradient.cpp  decorator.h  global.cpp  global.h  helper.cpp  helper.h  least_square_method.cpp  line_search.cpp  line_search.h  newton.cpp  newton.h  steepest_descent.cpp  steepest_descent.h
src/NOL/include/: .global.h.swp  .types.h.swp  conjugate_gradient.h  global.h  helper.h  least_square_method.h  line_search.h  newton.h  steepest_descent.h  types.h
src/test/: CMakeLists.txt  functions.cpp  functions.h  test_functions.cpp  test_functions.h  test_sd.cpp
test/: CMakeLists.txt  hello_test.cc  line_search_test.cc  line_search_test.cpp  test_functions.h
